--- a/docs/implementation_plans/2025-12-26-notes.md
+++ b/docs/implementation_plans/2025-12-26-notes.md
@@ -365,12 +365,12 @@ Model behavior is tested through service tests and the cascade test.
 
 2. Update `backend/src/schemas/__init__.py`
 
-3. Add `max_note_content_length: int = 2_000_000` to `core/config.py`
+3. Add `max_note_content_length: int = 500_000` to `core/config.py`
 
 **Testing Strategy:**
 - Test tag validation (lowercase, hyphen format)
 - Test title length validation
-- Test content length validation (up to 2MB, reject larger)
+- Test content length validation (up to 500KB, reject larger)
 - Test archived_at timezone handling
 - Test NoteListItem excludes content
 - Test model_validate from ORM objects
