--- a/docs/evals/mcp_tools_example.ipynb
+++ b/docs/evals/mcp_tools_example.ipynb
@@ -39,11 +39,9 @@
     "   make prompt-mcp-server\n",
     "   ```\n",
     "\n",
-    "6. **Install Node.js dependencies** (for mcp-remote):\n",
-    "   ```bash\n",
-    "   npm install -g mcp-remote\n",
-    "   # Or use npx (will download on first use)\n",
-    "   ```"
+    "6. **Node.js** (for `npx` to run `mcp-remote`):\n",
+    "   - Ensure Node.js is installed\n",
+    "   - `npx` will automatically download `mcp-remote` on first use"
    ]
   },
   {
@@ -454,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +472,7 @@
     "    # Create a test note with a deliberate typo\n",
     "    result = await mcp.call_tool(\"create_note\", {\n",
     "        \"title\": \"MCP Eval Test Note\",\n",
-    "        \"content\": \"This is a tset note for evaluating MCP tools.\\n\\nIt has a typo that we will fix using the edit_content tool.\",\n",
+    "        \"content\": \"This is a tset note for evaluating MCP tools.\\n\\nIt has a typo that we will fix using the edit_content tool.\",  # noqa: E501\n",
     "        \"tags\": [\"test\", \"mcp-eval\"],\n",
     "    })\n",
     "    if result.isError:\n",
@@ -988,7 +986,15 @@
    "source": [
     "## Cleanup\n",
     "\n",
-    "Delete the test notes we created:"
+    "Delete the test notes via the API:\n",
+    "\n",
+    "```bash\n",
+    "# Permanently delete a specific note\n",
+    "curl -X DELETE \"http://localhost:8000/notes/{note_id}?permanent=true\" \\\n",
+    "  -H \"Authorization: Bearer bm_devtoken\"\n",
+    "```\n",
+    "\n",
+    "Or filter by tag `test` or `mcp-eval` in the web UI to find and delete test notes."
    ]
   },
   {
@@ -997,15 +1003,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Note: There's no delete tool exposed via MCP currently.\n",
-    "# You can delete test data via the API directly:\n",
-    "#\n",
-    "# curl -X DELETE http://localhost:8000/notes/{note_id} \\\n",
-    "#   -H \"Authorization: Bearer {PAT_TOKEN}\"\n",
-    "#\n",
-    "# Or use the web UI to delete/trash the notes.\n",
+    "import httpx\n",
     "\n",
-    "print(\"Cleanup: Use the web UI or API to delete test notes with tags 'test', 'mcp-eval', 'agent-eval'\")"
+    "async with httpx.AsyncClient() as client:\n",
+    "    response = await client.delete(\n",
+    "        f\"http://localhost:8000/notes/{note_id}?permanent=true\",\n",
+    "        headers={\"Authorization\": f\"Bearer {PAT_TOKEN}\"},\n",
+    "    )\n",
+    "    if response.status_code == 204:\n",
+    "        print(f\"Deleted note {note_id}\")\n",
+    "    else:\n",
+    "        print(f\"Failed to delete: {response.status_code} - {response.text}\")"
    ]
   },
   {
@@ -1018,13 +1026,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.13.0"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
