--- a/docs/evals/mcp_tools_eval.ipynb
+++ b/docs/evals/mcp_tools_eval.ipynb
@@ -175,7 +175,7 @@
     "    return {\"tool_name\": None, \"arguments\": {}}\n",
     "\n",
     "\n",
-    "async def run_eval_case(mcp, case_data: dict, tools: list) -> dict:\n",
+    "async def run_eval_case(mcp, case_data: dict, tools: list) -> dict:  # noqa: ANN001\n",
     "    \"\"\"\n",
     "    Run a single eval case end-to-end.\n",
     "\n",
