--- a/docs/evals/mcp_tools_example.ipynb
+++ b/docs/evals/mcp_tools_example.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
        "- `name` (required): The prompt name (e.g., 'code-review'). Get names from list_prompts.\n",
        "- `old_str` (required): Exact text to find in the prompt content. Must match exactly one location. Include 3-5 lines of surrounding context for uniqueness.\n",
        "- `new_str` (required): Replacement text. Use empty string to delete the matched text.\n",
-       "- `arguments` (optional): Optional: Replace ALL prompt arguments atomically with content update. Use this when adding/removing template variables (e.g., {{ new_var }}) to avoid validation errors. If omitted, validation uses existing arguments. If provided, this list FULLY REPLACES current arguments (not a merge). All arguments must be referred to in the prompt template and vice versa.\n",
+       "- `arguments` (optional): Only include when adding, removing, or renaming template variables. Do NOT include for simple text edits (typos, wording) - omitting preserves existing arguments automatically. If provided, this list FULLY REPLACES all current arguments (not a merge).\n",
        "\n",
        "---\n",
        "\n",
