--- a/docs/evals/mcp_tools_example.ipynb
+++ b/docs/evals/mcp_tools_example.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,15 +90,15 @@
     "# Configuration using mcp-remote to bridge stdio to HTTP\n",
     "mcp_config = {\n",
     "    \"mcpServers\": {\n",
-    "        \"content\": {\n",
-    "            \"command\": \"npx\",\n",
-    "            \"args\": [\n",
-    "                \"mcp-remote\",\n",
-    "                CONTENT_MCP_URL,\n",
-    "                \"--header\",\n",
-    "                f\"Authorization: Bearer {PAT_TOKEN}\",\n",
-    "            ],\n",
-    "        },\n",
+    "        # \"content\": {\n",
+    "        #     \"command\": \"npx\",\n",
+    "        #     \"args\": [\n",
+    "        #         \"mcp-remote\",\n",
+    "        #         CONTENT_MCP_URL,\n",
+    "        #         \"--header\",\n",
+    "        #         f\"Authorization: Bearer {PAT_TOKEN}\",\n",
+    "        #     ],\n",
+    "        # },\n",
     "        \"prompts\": {\n",
     "            \"command\": \"npx\",\n",
     "            \"args\": [\n",
@@ -123,132 +123,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "Found `13` tools\n",
+       "Found `7` tools\n",
        "\n",
-       "### `search_bookmarks`\n",
+       "### `search_prompts`\n",
        "\n",
-       "Search bookmarks with optional text query and tag filtering. Returns active bookmarks only.\n",
+       "Search prompts with filters. Returns metadata including content_length and content_preview (first 500 chars) for size assessment before fetching full content. Use this for discovery before get_prompt_template.\n",
        "\n",
        "**Arguments:**\n",
        "\n",
-       "- `query` (optional): Text to search in title, URL, description, and content\n",
-       "- `tags` (optional): Filter by tags\n",
-       "- `tag_match` (optional): Tag matching: 'all' requires ALL tags, 'any' requires ANY tag\n",
-       "- `sort_by` (optional): Field to sort by\n",
-       "- `sort_order` (optional): Sort direction\n",
-       "- `limit` (optional): Maximum results to return\n",
+       "- `query` (optional): Text to search in name, title, description, and content. Omit to list all prompts.\n",
+       "- `tags` (optional): Filter by tags (lowercase with hyphens)\n",
+       "- `tag_match` (optional): 'all' requires ALL tags (default), 'any' requires ANY tag\n",
+       "- `sort_by` (optional): Field to sort by (default: created_at)\n",
+       "- `sort_order` (optional): Sort direction (default: desc)\n",
+       "- `limit` (optional): Maximum results to return (default: 50)\n",
        "- `offset` (optional): Number of results to skip for pagination\n",
-       "\n",
-       "---\n",
-       "\n",
-       "### `search_notes`\n",
-       "\n",
-       "Search notes with optional text query and tag filtering. Returns active notes only.\n",
-       "\n",
-       "**Arguments:**\n",
-       "\n",
-       "- `query` (optional): Text to search in title, description, and content\n",
-       "- `tags` (optional): Filter by tags\n",
-       "- `tag_match` (optional): Tag matching: 'all' requires ALL tags, 'any' requires ANY tag\n",
-       "- `sort_by` (optional): Field to sort by\n",
-       "- `sort_order` (optional): Sort direction\n",
-       "- `limit` (optional): Maximum results to return\n",
-       "- `offset` (optional): Number of results to skip for pagination\n",
-       "\n",
-       "---\n",
-       "\n",
-       "### `search_all_content`\n",
-       "\n",
-       "Search across all content types (bookmarks and notes) with unified results. Returns active content only. Each item has a 'type' field.\n",
-       "\n",
-       "**Arguments:**\n",
-       "\n",
-       "- `query` (optional): Text to search in title, description, URL (bookmarks), and content\n",
-       "- `tags` (optional): Filter by tags\n",
-       "- `tag_match` (optional): Tag matching: 'all' requires ALL tags, 'any' requires ANY tag\n",
-       "- `sort_by` (optional): Field to sort by\n",
-       "- `sort_order` (optional): Sort direction\n",
-       "- `limit` (optional): Maximum results to return\n",
-       "- `offset` (optional): Number of results to skip for pagination\n",
-       "\n",
-       "---\n",
-       "\n",
-       "### `get_content`\n",
-       "\n",
-       "Get a bookmark or note by ID. Supports partial reads for large content via line range params. The 'type' field is available in search results from search_all_content.\n",
-       "\n",
-       "**Arguments:**\n",
-       "\n",
-       "- `id` (required): The content item ID (UUID)\n",
-       "- `type` (required): Content type: 'bookmark' or 'note'\n",
-       "- `start_line` (optional): Start line for partial read (1-indexed)\n",
-       "- `end_line` (optional): End line for partial read (1-indexed, inclusive)\n",
-       "\n",
-       "---\n",
-       "\n",
-       "### `edit_content`\n",
-       "\n",
-       "Edit content using string replacement. The old_str must match exactly one location. Use search_in_content first to verify match uniqueness.\n",
-       "\n",
-       "**Arguments:**\n",
-       "\n",
-       "- `id` (required): The content item ID (UUID)\n",
-       "- `type` (required): Content type: 'bookmark' or 'note'\n",
-       "- `old_str` (required): Exact text to find. Include surrounding context for uniqueness.\n",
-       "- `new_str` (required): Replacement text. Use empty string to delete the matched text.\n",
-       "\n",
-       "---\n",
-       "\n",
-       "### `search_in_content`\n",
-       "\n",
-       "Search within a content item's text to find matches with line numbers and context. Use before editing to verify match uniqueness and build a unique old_str.\n",
-       "\n",
-       "**Arguments:**\n",
-       "\n",
-       "- `id` (required): The content item ID (UUID)\n",
-       "- `type` (required): Content type: 'bookmark' or 'note'\n",
-       "- `query` (required): Text to search for (literal match)\n",
-       "- `fields` (optional): Fields to search (comma-separated): content, title, description\n",
-       "- `case_sensitive` (optional): Case-sensitive search. Default: false\n",
-       "- `context_lines` (optional): Lines of context before/after each match (0-10). Default: 2\n",
-       "\n",
-       "---\n",
-       "\n",
-       "### `create_bookmark`\n",
-       "\n",
-       "Create a new bookmark.\n",
-       "\n",
-       "**Arguments:**\n",
-       "\n",
-       "- `url` (required): The URL to bookmark\n",
-       "- `title` (optional): Bookmark title\n",
-       "- `description` (optional): Bookmark description\n",
-       "- `tags` (optional): Tags to assign (lowercase with hyphens, e.g., 'machine-learning')\n",
-       "\n",
-       "---\n",
-       "\n",
-       "### `create_note`\n",
-       "\n",
-       "Create a new note.\n",
-       "\n",
-       "**Arguments:**\n",
-       "\n",
-       "- `title` (required): The note title (required)\n",
-       "- `description` (optional): Short description/summary\n",
-       "- `content` (optional): Markdown content of the note\n",
-       "- `tags` (optional): Tags to assign (lowercase with hyphens, e.g., 'meeting-notes')\n",
        "\n",
        "---\n",
        "\n",
        "### `list_tags`\n",
        "\n",
-       "List all tags with their usage counts\n",
+       "List all tags with their usage counts across prompts.\n",
        "\n",
        "---\n",
        "\n",
@@ -259,6 +160,18 @@
        "**Arguments:**\n",
        "\n",
        "- `name` (required): The prompt name (e.g., 'code-review'). Get names from list_prompts.\n",
+       "- `start_line` (optional): Start line for partial read (1-indexed). Optional.\n",
+       "- `end_line` (optional): End line for partial read (1-indexed, inclusive). Optional.\n",
+       "\n",
+       "---\n",
+       "\n",
+       "### `get_prompt_metadata`\n",
+       "\n",
+       "Get a prompt's metadata without the template content. Returns name, title, description, arguments, tags, content_length, and content_preview. Use to check size or arguments before fetching template.\n",
+       "\n",
+       "**Arguments:**\n",
+       "\n",
+       "- `name` (required): The prompt name (e.g., 'code-review'). Get names from list_prompts or search_prompts.\n",
        "\n",
        "---\n",
        "\n",
